// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionsTableData by default 1`] = `
<ActionPopover
  actions={
    Array [
      Object {
        "Component": [Function],
        "content": "View",
        "to": "/snippets/edit/example-id",
      },
      Object {
        "content": "Delete",
        "onClick": [Function],
        "visible": undefined,
      },
    ]
  }
/>
`;

exports[`ActionsTableData with access to create 1`] = `
<ActionPopover
  actions={
    Array [
      Object {
        "Component": [Function],
        "content": "Edit",
        "to": "/snippets/edit/example-id",
      },
      Object {
        "content": "Delete",
        "onClick": [Function],
        "visible": true,
      },
    ]
  }
/>
`;

exports[`ActionsTableData with subaccount 1`] = `
<ActionPopover
  actions={
    Array [
      Object {
        "Component": [Function],
        "content": "View",
        "to": "/snippets/edit/example-id?subaccount=999",
      },
      Object {
        "content": "Delete",
        "onClick": [Function],
        "visible": undefined,
      },
    ]
  }
/>
`;
